--- a/increase/inc.html
+++ b/increase/inc.html
@@ -23,45 +23,46 @@
   <body>
     <div class="container">
       <div class="row">
+        <div class="text-center">
           <h1>Do you want it Multiplied?</h1>
+        </div>
       </div>
     </div>
 
 <div class="container annoy-form">
   <div class="form-row">
-  <form>
-    <div class="form-group">
 
-      <label for="FormControlInput">Your weapon</label>
-      <input type="text" class="form-control form-control-lg" id="FormControlInput" placeholder="iloveannoyingyou" required>
+    <form>
+      <div class="form-group">
+        <label for="FormControlInput">Your weapon</label>
+        <input type="text" class="form-control form-control-lg" id="FormControlInput" placeholder="iloveannoyingyou" required>
+      </div>
 
-    </div>
+      <div class="form-group">
+          <label for="FormControlSelect">How Annoying?</label>
+          <select class="form-control" id="FormControlSelect">
+            <option>10</option>
+            <option>20</option>
+            <option>30</option>
+            <option>40</option>
+            <option>50</option>
+          </select>
+      </div>
+    </form>
 
-    <div class="form-group">
-        <label for="FormControlSelect">How Annoying?</label>
-        <select class="form-control" id="FormControlSelect">
-          <option>10</option>
-          <option>20</option>
-          <option>30</option>
-          <option>40</option>
-          <option>50</option>
-        </select>
-
-    </div>
-
-  </form>
+  </div>
 
  <button onclick="annoy()" class="btn btn-primary">Make My Day</button>
 
   <div class="form-group">
         <label for="FormControlTextarea">There You Go!</label>
         <textarea class="form-control form-control-lg" id="FormControlTextarea" rows="20"></textarea>
-    </div>
+  </div>
 
 </div>
-</div>
 
 
+<!-- JavaScript -->
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
