--- a/increase/inc.html
+++ b/increase/inc.html
@@ -24,7 +24,9 @@
     <div class="container">
       <div class="row">
         <div class="text-center">
-          <h1>Do you want it Multiplied?</h1>
+          <h3>Do you want To Annoy Someone With a Lot of Text Messages?</h3>
+
+          <p>Let Me Help Make your dream come true :D</p>
         </div>
       </div>
     </div>
@@ -34,7 +36,7 @@
 
     <form>
       <div class="form-group">
-        <label for="FormControlInput">Your weapon</label>
+        <label for="FormControlInput">Your Weapon</label>
         <input type="text" class="form-control form-control-lg" id="FormControlInput" placeholder="iloveannoyingyou" required>
       </div>
 
